<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_display_input_fields">DisplayInputFields</string>
    <string name="network_name">SSID or Network Name</string>
    <string name="input_data">Fill in optional fields</string>
    <string name="wifi_button">See public wifi hotspots</string>
    <string name="main_menu">Main menu</string>
    <string name="submit_data">Submit Data</string>
    <string name="title_activity_database_handler_routine">DatabaseHandlerRoutine</string>
    <string name="org_name">Organization</string>
    <string name="org_type">Organization Type</string>
    <string name="comments">Comments</string>
    <string name="title_activity_charger_input_fields">ChargerInputFields</string>

</resources>
