<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:focusable="false"
        android:contentDescription="@string/wifi_button"
        android:clickable="true"
        android:padding="@dimen/menu_box_y"
        android:src="@android:drawable/ic_menu_search"
        android:onClick="goToMap"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add A Wifi Service"
        android:id="@+id/button"
        android:clickable="true"
        android:contentDescription="@string/input_data"
        android:elegantTextHeight="false"
        android:onClick="goToFields"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add A Charging Service"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/submit_data"
        android:onClick="goToCharger" />

</RelativeLayout>
